mudança de cor (marrom)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
     <!-- Forma de Fundo -->
-    <div class="fundo">
+    <center>
+        <div class="fundo">
         <div class="perfil">
             <!-- Perfil -->
             <img id="img" src="./img/Foto.jpeg" alt="Foto de Perfil" width="150px">
@@ -18,14 +19,16 @@
         </div>
             <!-- Infos -->
         <div class="info">
-            <p>Tenho 19 anos</p>
-            <p>Sou de Petrolândia - PE</p>
-            <p>Cursando o 4º ano do Curso Técnico de Informática</p>
-            <p>IFBA - Campus Paulo Afonso</p>
-            <p>São Paulino Nato</p>
-            
+            <ul class="lista">
+                <li>Tenho 19 anos</li>
+                <li>Sou de Petrolândia - PE</li>
+                <li>Cursando o 4º ano do Curso Técnico de Informática</li>
+                <li>IFBA - Campus Paulo Afonso</li>
+                <li>São Paulino Nato</li>
+            </ul>    
         </div>
     </div>
+</center>
 </body>
 
 </html>
