--- a/index.html
+++ b/index.html
@@ -11,21 +11,33 @@
 <body>
     <!-- Forma de Fundo -->
     <center>
-        <div class="fundo">
+        <div class="container">
         <div class="perfil">
             <!-- Perfil -->
-            <img id="img" src="./img/Foto.jpeg" alt="Foto de Perfil" width="150px">
-            <h1>Ramon Rodrigues Silva</h1>
+            <div class="imgspace" id="img"></div>
+            <h2 class="nome">Ramon Rodrigues Silva</h2>  
+            
         </div>
             <!-- Infos -->
         <div class="info">
             <ul class="lista">
-                <li>Tenho 19 anos</li>
-                <li>Sou de Petrolândia - PE</li>
-                <li>Cursando o 4º ano do Curso Técnico de Informática</li>
-                <li>IFBA - Campus Paulo Afonso</li>
-                <li>São Paulino Nato</li>
-            </ul>    
+                <li>Tenho 19 anos 👦</li>
+                <li>Sou de Petrolândia - PE 🏙️</li>
+                <li>Cursando o 4º ano do Curso Técnico de Informática 👨🏽‍💻</li>
+                <li>IFBA - Campus Paulo Afonso 🏫</li>
+                <li>São Paulino Nato 💗</li>
+            </ul>
+            <div class="redes">
+                <a href="https://www.instagram.com/r.rodrigues_s/" target="_blank">
+                    <img src="./img/insta sem fundo.png" alt="Instagram">
+                </a>
+                <a href="https://github.com/Rodri10s" target="_blank">
+                    <img src="./img/githubpng.png" alt="Github">
+                </a>
+                <a href="https://www.youtube.com/watch?v=H2MoWa7Akn0" target="_blank">
+                    <img src="./img/only.png" alt="onlyfans">
+                </a>
+            </div>    
         </div>
     </div>
 </center>
