--- a/index.html
+++ b/index.html
@@ -1,46 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ramon Rodrigues Silva</title>
-    <link rel="stylesheet" href="./CSS/stilo.css">
-</head>
+    <link rel="stylesheet" href="./CSS/stilo.css" />
+  </head>
 
-<body>
-    <!-- Forma de Fundo -->
-    <center>
+  <body>
+    <div class="background">
+      <!-- Forma de Fundo -->
+      <center>
         <div class="container">
-        <div class="perfil">
+          <div class="perfil">
             <!-- Perfil -->
             <div class="imgspace" id="img"></div>
-            <h2 class="nome">Ramon Rodrigues Silva</h2>  
-            
-        </div>
-            <!-- Infos -->
-        <div class="info">
+            <h2 class="nome">Ramon Rodrigues Silva</h2>
+          </div>
+          <!-- Infos -->
+          <div class="info">
             <ul class="lista">
-                <li>Tenho 19 anos 👦</li>
-                <li>Sou de Petrolândia - PE 🏙️</li>
-                <li>Cursando o 4º ano do Curso Técnico de Informática 👨🏽‍💻</li>
-                <li>IFBA - Campus Paulo Afonso 🏫</li>
-                <li>São Paulino Nato 💗</li>
+              <li>Tenho 19 anos 👦</li>
+              <li>Sou de Petrolândia - PE 🏙️</li>
+              <li>Cursando o 4º ano do Curso Técnico de Informática 👨🏽‍💻</li>
+              <li>IFBA - Campus Paulo Afonso 🏫</li>
+              <li>São Paulino Nato 💗</li>
             </ul>
             <div class="redes">
-                <a href="https://www.instagram.com/r.rodrigues_s/" target="_blank">
-                    <img src="./img/insta sem fundo.png" alt="Instagram">
-                </a>
-                <a href="https://github.com/Rodri10s" target="_blank">
-                    <img src="./img/githubpng.png" alt="Github">
-                </a>
-                <a href="https://www.youtube.com/watch?v=H2MoWa7Akn0" target="_blank">
-                    <img src="./img/only.png" alt="onlyfans">
-                </a>
-            </div>    
+              <a
+                href="https://www.instagram.com/r.rodrigues_s/"
+                target="_blank"
+              >
+                <img src="./img/insta sem fundo.png" alt="Instagram" />
+              </a>
+              <a href="https://github.com/Rodri10s" target="_blank">
+                <img src="./img/githubpng.png" alt="Github" />
+              </a>
+              <a
+                href="https://www.youtube.com/watch?v=H2MoWa7Akn0"
+                target="_blank"
+              >
+                <img src="./img/only.png" alt="onlyfans" />
+              </a>
+            </div>
+          </div>
         </div>
+      </center>
     </div>
-</center>
-</body>
-
+  </body>
 </html>
